--- a/scss/site.scss
+++ b/scss/site.scss
@@ -4,9 +4,55 @@
     $green: random(255);
  
     main div:nth-child(#{$i}) {
-        background: rbg($red, $green, $blue)
+        background: rgb($red, $green, $blue)
     }
+}
+@mixin bigger($c, $r) {
+    grid-column-end: span $c;
+    grid-row-end: span $r;
+}
 
+body {
+    margin: 1vw 0 0 1vw;
+    color: #222;
+    font-family: Helvetica;
+    text-transform: uppercase;
+    font-size: 2vw;
+    text-shadow: 1px 2px #eee;
+}
+
+main {
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+div {
+    box-sizing: border-box;
+    border-right: 1vw solid #fff;
+    border-bottom: 1vw solid #fff;
+    min-height: 12.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:not(:empty){
+        position: sticky;
+        top: 0;
+        &.big {
+        top: 12.5vw;
+        }
+    }
+}
+
+.big {
+    @include bigger(2,2)   
+}
+.extrabig {
+    @include bigger(3,3)
+}
+.superbig {
+    @include bigger(4,4)
 }
 
 
